Show questionmarks on hover, prevent tooltip from going offscreen

--- a/bingo.css
+++ b/bingo.css
@@ -1,11 +1,11 @@
 *{
-margin: 0;
-padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 @font-face {
 	font-family: minecraftFont;
-    src: url(MinecrafterAlt.ttf);
+	src: url(MinecrafterAlt.ttf);
 }
 
 @font-face {
@@ -14,7 +14,7 @@ padding: 0;
 }
 
 html, body {
-    background-color: #F6F6F6;
+	background-color: #F6F6F6;
 	background-image: url("background.png");
 	background-size: 1920px 1080px;
 }
@@ -42,13 +42,13 @@ html, body {
 	margin-left: auto;
 	margin-right: auto;
 	-webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
+	-webkit-text-stroke-color: black;
 }
 
 .dropdown  {
 	float: left;
 	position: relative;
-    display: inline-block;
+	display: inline-block;
 	margin-left: 5%;
 	margin-top: 25px;
 }
@@ -63,16 +63,16 @@ html, body {
 	width: 250px;
 	line-height: 20px;
 	text-align: center;
-    font-size:1.2em;
-    border: 2px solid black;
-    cursor: pointer;
+	font-size:1.2em;
+	border: 2px solid black;
+	cursor: pointer;
 	margin-bottom: 2px;
 	background-size: 248px 48px;
 }
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    	background-color: #3e8e41;
 	color: #FFF787;
 }
 
@@ -119,19 +119,20 @@ html, body {
 
 #tooltip {
 	margin: 20px;
-    position: relative;
-    display: inline-block;
+	position: relative;
+	display: inline-block;
 	width: 300px;
-	height: 75px;
 	border: 2px solid purple;
 	background-color: rgba(0,0,0,.9);
 	font-family: settingsFont;
 	padding: 10px;
+	line-height: 1.2em;
 }
 
 #tooltip img {
 	border: 2px solid #EBEBEB;
 	margin-bottom: 10px;
+	margin-right: 5px;
 	width: 64px;
 	height: 64px;
 	float: left;
@@ -166,7 +167,7 @@ html, body {
 	border-spacing: 0px;
 	border: solid 4px #FFF;
 	background-color: #C6C6C6;
-    border-collapse: separate;
+    	border-collapse: separate;
 	border-radius: 5px;
 	position: relative;
 	-webkit-touch-callout: none;
@@ -195,14 +196,18 @@ html, body {
 	visibility: hidden;
 }
 
-.tooltipQ { 
+.tooltipQ {
+	opacity: 0.5;
 	width: 15px;
 	height: 15px;
-	float: right;
 	position: absolute;
 	padding-top: 4px;
-    right: 5px;
-    top: 5px;
+    	right: 5px;
+    	top: 5px;
+}
+
+.tooltipQhidden {
+	visibility: hidden !important;
 }
 
 .buttoncard {
